# project_EduDocChain

./: .gitignore  Makefile  README.md  build.sh  index.html  main.tsx  manage.py  package-lock.json  package.json  pyproject.toml  ruff.toml  vite.config.js
app/javascript/: App.tsx  init.jsx
app/javascript/components/: Header.tsx
app/javascript/pages/: SignupPage.tsx
edudocchain/: asgi.py  settings.py  urls.py  wsgi.py
edudocchain/templates/: Descriotion
